demarage du demarage

--- a/[Array]retrouvailles/index.html
+++ b/[Array]retrouvailles/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
   </head>
   <body>
+    <h1>Rencontre</h1>
+    <p>Vous trouverez les consignes de l'exercice <a href="#">ici</a></p>
+
+    <!-- Dans cet exercice il est formellement interdis d'ecrire directement dans le DOM,
+          ça va vous piquer pendant toute la durée de l'exercice mais vous me remercierez aprés.
+          Les consignes se trouvent en ligne ( prochainement )
+
+        Bon courage!
+
+      Adricen
+        -->
     <div id="character_01" class="profil">
 
     </div>
