--- a/[Array]retrouvailles/index.html
+++ b/[Array]retrouvailles/index.html
@@ -15,7 +15,7 @@
 
         Bon courage!
 
-      Adricen
+      Adrien
         -->
     <div id="character_01" class="profil">
 
@@ -27,6 +27,5 @@
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 
-    </script>
   </body>
 </html>
