mise a jour du site

--- a/[Array]retrouvailles/index.html
+++ b/[Array]retrouvailles/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Rencontre</h1>
-    <p>Vous trouverez les consignes de l'exercice <a href="#">ici</a></p>
+    <p>Vous trouverez les procedures principales GIT <a href="https://github.com/Ma6Tvacoder-Docs/ExercicesJS/blob/master/Procedures_Git.md" target="_blank">ici</a></p>
+    <p>Vous trouverez les consignes de l'exercice <a href="https://github.com/Ma6Tvacoder-Docs/ExercicesJS/blob/master/%5BArray%5Dretrouvailles/exoJS.md" target="_blank">ici</a></p>
 
     <!-- Dans cet exercice il est formellement interdis d'ecrire directement dans le DOM,
           ça va vous piquer pendant toute la durée de l'exercice mais vous me remercierez aprés.
