mise a jour debut JS

--- a/[Array]retrouvailles/index.html
+++ b/[Array]retrouvailles/index.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <title>Travail sur les tableaux et les interactions possibles</title>
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
   </head>
   <body>
-    <h1>Rencontre</h1>
-    <p>Vous trouverez les consignes de l'exercice <a href="#">ici</a></p>
-
-    <!-- Dans cet exercice il est formellement interdis d'ecrire directement dans le DOM,
-          ça va vous piquer pendant toute la durée de l'exercice mais vous me remercierez aprés.
-          Les consignes se trouvent en ligne ( prochainement )
-
-        Bon courage!
-
-      Adricen
-        -->
-    <div id="character_01" class="profil">
-
+    <h1>Rencontre entre un grand-père et son petit-fils</h1>
+    	<p>Vous trouverez les consignes de l'exercice <a href="#">ici</a></p>
+    <div id="personnage01" class="profil">
     </div>
-    <div id="character_02" class="profil">
-
+    <div id="personnage02" class="profil">
     </div>
-
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-
-    </script>
   </body>
 </html>
