--- a/[01]LaConsole/index.html
+++ b/[01]LaConsole/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <h1 id="title" class="titre">Pour démarrer l'exercice, faites <span class="maj">clique droit</span> > <span class="maj">inspecter l'élément</span> ou <span class="maj">F12</span></h1>
-      <p id="next" class="titre">La console ouverte, cliquez sur l'onglet <span class="maj">console</span></p>
+      <h1 id="title" class="titre">Pour démarrer l'exercice, faites un <span class="maj">clic droit</span> > <span class="maj">inspecter l'élément</span> ou <span class="maj">F12</span></h1>
+      <p id="next" class="titre">Une fois la console ouverte, cliquez sur l'onglet <span class="maj">console</span></p>
   </header>
     <script type="text/javascript" src="js/sommaire.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
