polish et ajout de la music

--- a/[03]-AnimPersonnage/index.html
+++ b/[03]-AnimPersonnage/index.html
@@ -6,10 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div id="megaman">
-      <div  class="run">
 
-      </div>
+    <!-- La music viens de là : http://ericskiff.com/music/ -->
+    <audio controls autoplay loop>
+      <source src="audio/03 Chibi Ninja.mp3" type="audio/mpeg">
+      <!-- <source src="audio/07 We're the Resistors.mp3" type="audio/mpeg"> -->
+    </audio>
+
+    <div id="megaman">
+      <div  class="run"></div>
     </div>
 
     <script type="text/javascript" src='js/script.js'></script>
